--- a/ms-communication-buyfeedback/pom.xml
+++ b/ms-communication-buyfeedback/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.br.ms.communication</groupId>
 	<artifactId>ms-communication-buyfeedback</artifactId>
-	<version>1.0.0.-SNAPSHOT</version>
+	<version>3.0.0.-SNAPSHOT</version>
 
 	<name>ms-communication-buyfeedback</name>
 
@@ -49,6 +49,12 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.4</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
 	</dependencies>
