--- a/ms-communication-buyfeedback/src/main/resources/application.properties
+++ b/ms-communication-buyfeedback/src/main/resources/application.properties
@@ -1,25 +1,15 @@
+server.port=8082
+spring.application.name=ms-communication-buytrip
 
-#spring.rabbitmq.username=rabbit666
-#spring.rabbitmq.password=melhorsenhadomundo
+#Configurações do Redis
+spring.redis.host=localhost
+spring.redis.port=56074
+
+#Configurações do Kafka
+spring.kafka.producer.bootstrap.servers=air-de-douglas:9092
+spring.kafka.bootstrap-servers=air-de-douglas:9092
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+fila.finalizado=pagamento-finalizado
 
 spring.cloud.stream.bindings.input.destination=compra
 spring.cloud.stream.bindings.input.group=buyprocess
-
-#fila.finalizado=fila-compras-finalizado
-
-#server.port=0
-#server.port=8082
-
-spring.application.name=status
-
-spring.cloud.consul.host=consul
-spring.cloud.consul.port=8500
-
-#spring.redis.host=redis
-#spring.redis.port=6379
-
-#spring.rabbitmq.host=rabbitmq
-spring.cloud.consul.host=consul
-spring.cloud.consul.port=8881
-
-spring.cloud.consul.discovery.preferIpAddress=true
